<resources>
    <string name="app_name">simpleProfile</string>
    <string name="profile_image">profile image</string>
    <string name="user_name">Ali Gamal</string>
    <string name="email">Email</string>
    <string name="alialashwall14_gmail_com">alialashwall14@gmail.com</string>
    <string name="icon">icon</string>
    <string name="age">Age</string>
    <string name="age_value">23</string>
    <string name="job">Job</string>
    <string name="android_developer">Android Developer</string>
    <string name="linkedin_icon">linkedin icon</string>
    <string name="instagram">instagram</string>
    <string name="github">github</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="back_icon">back icon</string>
</resources>