<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/backIconId"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@id/emailIconId"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        android:contentDescription="@string/back_icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_image"
            android:cropToPadding="true"
            android:src="@drawable/profile_img" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


    <ImageView
        android:id="@+id/emailIconId"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameId"
        app:tint="@color/light_gray" />

    <TextView
        android:id="@+id/emailId"
        style="@style/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="12dp"
        android:text="@string/email"
        app:layout_constraintStart_toEndOf="@id/emailIconId"
        app:layout_constraintTop_toTopOf="@id/emailIconId" />

    <TextView
        android:id="@+id/emailValueId"
        style="@style/valuesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:text="@string/alialashwall14_gmail_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailIconId" />

    <ImageView
        android:id="@+id/ageIconId"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/age"
        app:layout_constraintStart_toStartOf="@+id/emailIconId"
        app:layout_constraintTop_toBottomOf="@+id/emailIconId"
        app:tint="@color/light_gray" />

    <TextView
        android:id="@+id/ageId"
        style="@style/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="@+id/emailId"
        app:layout_constraintTop_toTopOf="@id/ageIconId" />

    <TextView
        android:id="@+id/ageValueId"
        style="@style/valuesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:text="@string/age_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ageIconId" />

    <ImageView
        android:id="@+id/jobIconId"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/job"
        app:layout_constraintStart_toStartOf="@+id/emailIconId"
        app:layout_constraintTop_toBottomOf="@+id/ageIconId"
        app:tint="@color/light_gray" />

    <TextView
        android:id="@+id/jobId"
        style="@style/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job"
        app:layout_constraintStart_toStartOf="@+id/ageId"
        app:layout_constraintTop_toTopOf="@id/jobIconId" />


    <TextView
        android:id="@+id/jobValueId"
        style="@style/valuesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/android_developer"
        app:layout_constraintEnd_toEndOf="@+id/ageValueId"
        app:layout_constraintTop_toTopOf="@id/jobIconId" />


    <ImageView
        android:id="@+id/linkedinId"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/linkedin_icon"
        android:src="@drawable/linkedin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/githubId"
        app:layout_constraintStart_toStartOf="@+id/jobIconId"
        app:layout_constraintTop_toBottomOf="@+id/jobId" />

    <ImageView
        android:id="@+id/githubId"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/github"
        android:src="@drawable/github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/instagramId"
        app:layout_constraintStart_toEndOf="@+id/linkedinId"
        app:layout_constraintTop_toBottomOf="@+id/jobId" />

    <ImageView
        android:id="@+id/instagramId"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/instagram"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/githubId"
        app:layout_constraintTop_toBottomOf="@+id/jobId" />

</androidx.constraintlayout.widget.ConstraintLayout>